# OpenConverter

./: .gitignore  LICENSE  README.md  README_EN.md  package.json  vite.config.js
android/: .gitignore  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/libs/: .gitkeep
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ffmpeg_jni.cpp  ffmpeg_transcode.c  ffmpeg_transcode.h
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_logo.xml  ic_notification.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/src/test/resources/test-kgm/: expected-sha256.json  synthetic-kgm.kgm  synthetic-kgma.kgma  synthetic-vpr.vpr
android/app/src/test/resources/test-kwm/: expected-sha256.json  synthetic-kwm.kwm
android/app/src/test/resources/test-ncm/: expected-sha256.json
android/app/src/test/resources/test-qmc-v2/: expected-sha256.json  synthetic-mflac.mflac  synthetic-mgg.mgg
android/scripts/: build-ffmpeg.sh  build-lame.sh  fetch-ffmpeg-kit.sh
docs/: M1-M3-original-code.md
docs/mockups/v0.4/: _common.css  _logo.html  about.html  history.html  home-progress.html  home.html  index.html  settings.html
docs/superpowers/baselines/: 2026-06-16-linux-pre-windows.md
docs/superpowers/issues/: 2026-06-16-windows-acceptance.md  2026-06-17-android-issues.md  2026-06-17-host-setup.md
docs/superpowers/plans/: 2026-06-16-windows-installer.md  2026-06-17-android-port.md  2026-06-17-android-v030.md  2026-06-18-android-v040-ui-redesign.md  2026-06-18-android-v1.md  2026-06-19-android-v1-ui-redesign.md
docs/superpowers/reports/: 2026-06-19-v1.0.0-release-report.md
docs/superpowers/specs/: 2026-06-16-windows-installer-design.md  2026-06-17-android-port-design.md  2026-06-17-android-v030-design.md  2026-06-18-android-v040-ui-redesign.md  2026-06-18-android-v041-crashlog-engine-spec.md  2026-06-18-android-v1-design.md  2026-06-19-android-v1-ui-redesign-design.md
scripts/: build-android.sh  generate-keystore.sh  rename-apk.sh  rename-linux-artifacts.sh  setup-win-deps.sh  test-android.sh
src/: cli.js
src/decoders/: index.js  kgm.js  kwm.js  ncm.js  qmc.js
src/main/: config.js  ffmpeg-path.js  ffmpeg.js  history.js  index.js
src/preload/: index.js
src/renderer/: index.html  main.js  style.css
tests/: build.test.sh  check-no-commercial.sh  ffmpeg-path.test.js  gen-kgm-synthetic.js  gen-kwm-synthetic.js  gen-ncm-synthetic.js  gen-qmc-v1-synthetic.js  gen-qmc-v2-synthetic.js  history.test.js  kgm.test.js  kwm.test.js  ncm.test.js  parallel.test.js  qmc-v2.test.js  qmc.test.js
tests/manual/: real-device-checklist.md
(+113 files in other folders)
